Dark mode fixes

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -155,6 +155,9 @@
   white-space: nowrap;
   opacity: 0.6;
   transition-delay: 0s;
+  width: 180px;
+  text-overflow:ellipsis;
+  overflow:hidden;
 }
 
 .sidebar .nav-links li .sub-menu a:hover {
@@ -670,4 +673,27 @@ body.sidebar-hidden .home-section {
 
 .clickable-label:hover {
   text-decoration: underline;
+}
+
+/* DARK MODE */
+
+/* Search Input Dark Mode */
+.dark-mode .styled-input, .dark-mode .tab-search-bar, .dark-mode .tab-search-bar:hover, .dark-mode .tab-search-bar:focus, .dark-mode .tab-item {
+  background-color: #333;
+  color: #ffffff;
+  border: 1px solid #555;
+  box-shadow: inset 0 1px 3px rgba(255, 255, 255, 0.1);
+}
+
+.dark-mode .tab-item:hover {
+  background-color: #333;
+}
+
+.dark-mode .tab-title {
+  color: #ffffff;
+}
+
+.dark-mode .icon-option:hover {
+  background-color: #4f4f4f;
+  border-radius: 5px;
 }
